--- a/shinobi-frontend/src/Components/Camps/CampsComponent/CampsComponent.css
+++ b/shinobi-frontend/src/Components/Camps/CampsComponent/CampsComponent.css
@@ -12,7 +12,7 @@
   right: 0;
   left: 0;
   border-radius: 0.33rem;
-  background-image: url('https://source.unsplash.com/i5Kx0P8A0d4');
+  background-image: url('http://drive.google.com/uc?export=view&id=1K93XlY26L11k32YonJOyoKiZumKtq0td');
   background-position: center;
   background-size: cover;
   z-index: -1;
