change Gmap implementation, add social media links and mailto, remove parallax, improve contact page

--- a/shinobi-frontend/src/Components/Contact/ContactPage.css
+++ b/shinobi-frontend/src/Components/Contact/ContactPage.css
@@ -49,9 +49,10 @@
 }
 .contact-list-items > li svg {
   transition: transform 0.5s ease-in-out;
+  margin-bottom: -3px;
 }
 .contact-list-items > li:hover svg {
-  transform: scale(167%);
+  transform: scale(133%);
 }
 
 .inline-elements {
