--- a/shinobi-frontend/src/Components/Footer/Footer.css
+++ b/shinobi-frontend/src/Components/Footer/Footer.css
@@ -11,28 +11,34 @@
   display: flex;
   justify-content: space-between;
 }
+.footer-top ul {
+  margin: 0.1rem;
+}
 .logo-footer {
   width: 20%;
   max-width: 100px;
   display: flex;
   align-items: center;
-  margin-left: 0.8rem;
+  margin-left: 0.3rem;
 }
 .footer .contact {
   flex-direction: column;
   align-self: flex-start;
-  margin: 0 0.8rem;
+  margin: 0 0.3rem;
   width: auto;
 }
 .footer-contact-list li {
-  padding: 0.3rem;
+  padding: 0.1rem;
+}
+.footer-contact-list li svg {
+  margin-bottom: -2px;
 }
 .footer-contact-list li:hover svg {
-  transform: scale(1.5);
+  transform: scale(1.3);
 }
 .footer ul {
   list-style: none;
-  padding: 0.3rem;
+  padding: 0.1rem;
 }
 
 .footer ul li {
@@ -40,7 +46,7 @@
 }
 
 .footer-bottom > .social-media {
-  border-top: 0.15rem solid hsl(var(--clr-gold));
+  border-top: 0.15rem solid hsl(var(--clr-dark));
   width: 100%;
 }
 .social-media ul {
@@ -56,6 +62,12 @@ ul li:hover {
 }
 ul li:hover svg {
   transform: scale(1.2);
+}
+
+.created-by {
+  color: hsl(var(--clr-gold));
+  font-size: 0.66rem;
+  background-color: hsl(var(--clr-dark));
 }
 
 .secondary-page-footer > * {
