--- a/shinobi-frontend/src/Components/TopPage/TopPage.css
+++ b/shinobi-frontend/src/Components/TopPage/TopPage.css
@@ -79,27 +79,30 @@
   align-items: center;
   flex-wrap: wrap;
   width: 100%;
-  height: 5rem;
+  height: 7rem;
   margin: 5.1rem 0;
 }
 .partners-logos > div {
   width: 10rem;
   height: 100%;
 }
+.partners-logos > div:hover {
+  cursor: pointer;
+}
 .partner1 {
-  background-image: url('https://oss.couponkirin.com/merchants/original/revgear.jpg');
-  background-size: cover;
+  background-image: url('./partners-logo/fast-logo.jpg');
+  background-size: contain;
   background-repeat: no-repeat;
   background-position-y: center;
 }
 .partner2 {
-  background-image: url('https://wavefarmproductions.com/wp-content/uploads/2018/11/mcgregor-logo-300x201.jpg');
+  background-image: url('partners-logo/revgear-logo.jpg');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
 .partner3 {
-  background-image: url('https://bjjdepot.ca/media/catalog/category/Hayabusa_Logo_2010.jpg');
+  background-image: url('./partners-logo/FUJI-Mats-Logos.webp');
   background-size: contain;
   background-repeat: no-repeat;
   background-position-y: center;
