--- a/shinobi-frontend/src/index.css
+++ b/shinobi-frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Antonio:wght@600&family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 @import 'base.css';
 @import 'Main.css';
 @import 'Components/WelcomePage/WelcomePage.css';
