--- a/shinobi-frontend/src/Components/Camps/CampsPage/CampsPage.css
+++ b/shinobi-frontend/src/Components/Camps/CampsPage/CampsPage.css
@@ -1,29 +1,25 @@
 .camps-page {
   position: relative;
   min-height: 100vh;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
 }
 
-.camps-container {
-  flex-direction: column;
-  width: 99%;
-  margin: 0 auto;
+.camp-section {
+  margin-top: 3rem;
 }
 
-.camps-title {
-  padding: 0.3rem;
+.camp-title {
+  padding: 1rem;
 }
 
 .camps-page-content {
   padding-inline: 0.3rem;
 }
 
-.camp-video {
-  max-height: 100vh;
+.camp-description {
+  padding: 0.3rem;
 }
 
 iframe {
   border: none;
+  max-height: 99vh;
 }
