--- a/shinobi-frontend/src/Components/WelcomePage/WelcomePage.css
+++ b/shinobi-frontend/src/Components/WelcomePage/WelcomePage.css
@@ -1,9 +1,4 @@
 .welcome-page {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,6 +26,18 @@
     width: auto;
     height: 100%;
   }
+}
+
+.sound-icon {
+  color: hsl(var(--clr-dark));
+  font-size: 3rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.sound-icon:hover {
+  cursor: pointer;
+  color: hsl(var(--clr-red));
 }
 
 .presentation-text {
