--- a/shinobi-frontend/src/Components/AboutPage/AboutPage.css
+++ b/shinobi-frontend/src/Components/AboutPage/AboutPage.css
@@ -19,7 +19,8 @@
 }
 
 .coaches-wrapper {
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  justify-content: space-evenly;
   place-items: center;
 }
 
