--- a/shinobi-frontend/src/Components/Gallery/GalleryPage/GalleryPage.css
+++ b/shinobi-frontend/src/Components/Gallery/GalleryPage/GalleryPage.css
@@ -2,6 +2,10 @@
   position: relative;
   width: 100vw;
   padding-inline: 1rem;
+
+  .gallery-page-content {
+    min-height: 70vh;
+  }
 }
 
 .images-container {
