Media gallery manager enhanced

--- a/shinobi-frontend/src/base.css
+++ b/shinobi-frontend/src/base.css
@@ -16,6 +16,8 @@
   --clr-dark: 260 14% 4%;
   --clr-gold: 36 54% 51%;
   --clr-silver: 27 26% 93%;
+  --clr-green: 142 76% 36%;
+  --clr-blue: 217 91% 60%;
 
   /* Font-families */
   --ff-normal: 'Antonio', sans-serif;
